# youtubeideas

./: .env  drizzle.config.ts  middleware.ts  next.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/ideas/: page.tsx
app/video/[id]/: page.tsx
app/videos/: page.tsx
components/: Button.tsx  Navbar.tsx  SettingsModal.tsx  VideoList.tsx  idea-dailog.tsx
lib/: utils.ts
server/: mutations.ts  queries.ts  youtube-actions.ts
server/db/: schema.ts
youtube_ideas_crew/: README.md  pyproject.toml
youtube_ideas_crew/src/youtube_ideas_crew/: crew.py  main.py
youtube_ideas_crew/src/youtube_ideas_crew/config/: agents.yaml  tasks.yaml
youtube_ideas_crew/src/youtube_ideas_crew/tools/: SearchYoutubeTool.py
