[project]
name = "youtube_ideas_crew"
version = "0.1.0"
description = "youtube-ideas-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
youtube_ideas_crew = "youtube_ideas_crew.main:run"
run_crew = "youtube_ideas_crew.main:run"
train = "youtube_ideas_crew.main:train"
replay = "youtube_ideas_crew.main:replay"
test = "youtube_ideas_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
